--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,18 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script>
+      (function() {
+          const path = window.location.pathname;
+          if (path !== '/' && !path.endsWith('index.html')) {
+              if (path.endsWith('/')) {
+                  window.location.replace(path + 'index.html');
+                  return;
+              }
+              window.location.replace(path + '/index.html');
+          }
+      })();
+    </script>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
